[EFL] Fix build warning in NetworkStateNotifierEfl.cpp https://bugs.webkit.org/show_bug.cgi?id=102061

Patch by KyungTae Kim <ktf.kim@samsung.com> on 2012-11-13
Reviewed by Gyuyoung Kim.

The second argument for NLMSG_OK needs to be unsigned to avoid the -Wsign-compare warning.

* platform/network/efl/NetworkStateNotifierEfl.cpp:
(WebCore::readSocketCallback):

Canonical link: https://commits.webkit.org/120262@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134537 268f45cc-cd09-0410-ab3c-d52691b4dbfc